Added ability to link between all base detail pages and index page. Also added list of bases to each base detail page.

--- a/app/views/bases/index.html.erb
+++ b/app/views/bases/index.html.erb
@@ -9,7 +9,7 @@
     <h1><%= pluralize(@bases.count, "Base") %></h1>
     <ul>
       <% @bases.each do |base| %>
-        <li><h2><%= base.name %></h2></li><br/>
+        <li><h2><%= link_to(base.name, base_path(base)) %></h2></li><br/>
         <%= base.name %> is a <%= base.branch %> base, located in
         <%= base.city %>, <%= base.state %>. Its specific location is
         <%= base.lat %>, <%= base.long %>.
