Added ability to add and edit base information. Also fixed bug in inflections relating to pluralization of base

--- a/app/views/bases/index.html.erb
+++ b/app/views/bases/index.html.erb
@@ -14,5 +14,7 @@
         <%= base.city %>, <%= base.state %>. Its specific location is
         <%= base.lat %>, <%= base.long %>.
       <% end %>
+    </ul>
+    <h3><%= link_to "Add New Base", new_base_path %></h3>
   </body>
 </html>
