--- a/app/views/bases/show.html.erb
+++ b/app/views/bases/show.html.erb
@@ -16,6 +16,7 @@
         <%= @base.lat %>, <%= @base.long %>
       </p>
     </article>
+    <h3><%= link_to "Edit information for #{@base.name}", edit_base_path(@base) %></h3>
     <article>
     <h2>Other bases</h2>
     <ul>
