Added form partial for new and edit.

--- a/app/views/bases/new.html.erb
+++ b/app/views/bases/new.html.erb
@@ -1,29 +1,3 @@
 <h1>Add New Base</h1>
 
-<%= form_for(@base) do |f| %>
-  <p>
-  <%= f.label :name %><br/>
-  <%= f.text_field :name %>
-  </p>
-  <p>
-  <%= f.label :branch %><br/>
-  <%= f.text_field :branch %>
-  </p>
-  <p>
-  <%= f.label :city %><br/>
-  <%= f.text_field :city %>
-  </p>
-  <p>
-  <%= f.label :state %><br/>
-  <%= f.text_field :state %>
-  </p>
-  <p>
-  <%= f.label :lat %><br/>
-  <%= f.text_field :lat %>
-  </p>
-  <p>
-  <%= f.label :long %><br/>
-  <%= f.text_field :long %>  
-  </p>
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
