--- a/app/views/bases/show.html.erb
+++ b/app/views/bases/show.html.erb
@@ -17,6 +17,8 @@
       </p>
     </article>
     <h3><%= link_to "Edit information for #{@base.name}", edit_base_path(@base) %></h3>
+    <h3><%= link_to "Delete #{@base.name}", base_path(@base), method: :delete, 
+          data: {confirm: "Are you sure you want to delete #{@base.name}"} %></h3>
     <article>
     <h2>Other bases</h2>
     <ul>
