Added image upload ability to bases, and added images into assets for existing bases

--- a/app/views/bases/_form.html.erb
+++ b/app/views/bases/_form.html.erb
@@ -23,6 +23,10 @@
   <%= f.label :long %><br/>
   <%= f.text_field :long %>  
   </p>
+  <p>
+  <%= f.label :image_filename %><br/>
+  <%= f.text_field :image_filename, size: 30, placeholder: "GIF, JPG, or PNG file" %>  
+  </p>
   <%= f.submit %>
 <% end %><br/><br/>
 
