Added javascript to conduct ajax request for deleting bases from index page dynamically

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,23 @@
 <html>
 <head>
   <title>BaseDirectory</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+<header style="color: #F0F0F0; background: #237CBE;">
+  <h1>BaseDirectory.com: We have your bases covered</h1>
+</header>
+
 <%= yield %>
+
+<footer style="background: #F0F0F0; color: #237CBE;">
+<p>
+  Copyright &copy; 2013 BaseDirectory
+</p>
+</footer>
 
 </body>
 </html>
