--- a/app/views/bases/index.html.erb
+++ b/app/views/bases/index.html.erb
@@ -1,20 +1,15 @@
-<!doctype html>
-<html>
-  <head>
-    <title>
-      BaseDirectory: We Have Your Bases Covered
-    </title>
-  </head>
-  <body>
+
     <h1><%= pluralize(@bases.count, "Base") %></h1>
     <ul>
       <% @bases.each do |base| %>
-        <li><h2><%= link_to(base.name, base_path(base)) %></h2></li>
+        <li><h2><%= link_to(base.name, base_path(base)) %></h2>
         <%= base.name %> is a <%= base.branch %> base, located in
         <%= base.city %>, <%= base.state %>. Its specific location is
         <%= base.lat %>, <%= base.long %>.
+        <%= link_to "Delete #{base.name}", base_path(base), method: :delete, 
+          data: {confirm: "Are you sure you want to delete #{base.name}"}, 
+          class: "delete" %></li>
       <% end %>
     </ul>
     <h3><%= link_to "Add New Base", new_base_path %></h3>
-  </body>
-</html>
+  
