Added some javascript functionality for practice, but commented out for real, and added delete on index page

--- a/app/assets/stylesheets/bases.css
+++ b/app/assets/stylesheets/bases.css
@@ -1,2 +1,8 @@
-a.delete { color: red;
-           display: block; }
+/*a { text-decoration: none }
+
+li a.deleted { color: blue;
+               background: yellow; }*/
+
+   a.delete { color: red !important;
+              display: block; }
+
