--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,3 @@
-<header style="color: #F0F0F0; background: #237CBE;">
+<header id="header">
   <h1>BaseDirectory.com: We have your bases covered</h1>
 </header>
