Added some styling to center header and add border

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -5,10 +5,18 @@ $secondary-color: #F0F0F0;
               width: 200px;
               float: right; }
 
+
+
    #header { color: $secondary-color; 
              background: $primary-color;
-             padding: 5px; }
+             padding: 5px;
+             border-bottom: 5px solid darken($primary-color, 25%);
+
+    h1 { text-align: center; } 
+
+           }
 
    #footer { background: $secondary-color; 
              color: $primary-color;
-             padding: 5px; }
+             padding: 5px;
+             border-top: 5px solid darken($secondary-color, 25%); }
