Flash notice cleanup to put into a paragraph tag and also to make it conditional on whether a flash notice exists

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
 
     <%= yield %>
 
-    <%= flash.notice %><br/>
+    <% if flash.notice %>
+      <p>
+        <%= flash.notice %>
+      </p>
+    <% end %>
 
     <%= render 'layouts/footer' %>
 
